--- a/FRONT/src/components/paginaPeces/paginaPeces.css
+++ b/FRONT/src/components/paginaPeces/paginaPeces.css
@@ -3,17 +3,13 @@
 
 #cards-paginaPeces{
     position: absolute;
-    
     width:1300px;
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
     margin-left: 600px;
-
-    
-    
-    
-    
+    z-index: -1;
+   
 }
 
 #section-cards-paginaPeces{
@@ -24,7 +20,7 @@
     width: 1900px;
     display: flex;
     justify-content: center;
-    
+    z-index: -1;
     width:1300px;
     margin: auto;
     
