--- a/FRONT/src/components/paginAdmin/paginaAdmin.css
+++ b/FRONT/src/components/paginAdmin/paginaAdmin.css
@@ -63,14 +63,14 @@
 
 #form-info{
     width: 900px;
-    height: 300px;
+    height: 350px;
     margin: auto;
     background-color: transparent;
     margin-top: 350px;
     backdrop-filter: blur(5px) grayscale(30%);
     border: 1px solid whitesmoke;
     border-radius: 20px;
-    display: block;
+    display: none;
     z-index: 2;
     
     }
@@ -135,4 +135,22 @@
     justify-content: center;
     margin-top: 5px;
     
+}
+
+#div-btns-info{
+    position: relative;
+    top:250px;
+    
+    display: flex;
+    justify-content: space-evenly;
+    margin-left: 40px;
+}
+
+#btn-cerrar-info{
+    font-size: 30px;
+    font-weight: 300px;
+    border-radius: 10px;
+    width: 50px;
+    height: 50px;
+    margin-top: 30px;
 }
