--- a/FRONT/src/components/cuadroImagenes/cuadroImagenes.css
+++ b/FRONT/src/components/cuadroImagenes/cuadroImagenes.css
@@ -95,3 +95,15 @@
     left: 50px;
 
 }
+
+@media only screen and (min-width:320px) and (max-width:480px){
+    #secCuadro{
+        position: relative;
+       
+        font-size: 25px;
+    }
+    .divCuadro{
+        margin-top: 200px;
+    }
+
+}
